# goonsharp

./: .gitignore  Cargo.toml  README.md  SETUP.md  feat.new  prompt.new  test.goons
.github/workflows/: build.yml
crates/goonhub/: Cargo.toml
crates/goonhub/src/: main.rs
crates/goonsharp-cli/: Cargo.toml
crates/goonsharp-cli/src/: main.rs
crates/goonsharp-codegen/: Cargo.toml
crates/goonsharp-codegen/src/: lib.rs
crates/goonsharp-lsp/: Cargo.toml
crates/goonsharp-lsp/src/: main.rs
crates/goonsharp-parser/: Cargo.toml
crates/goonsharp-parser/src/: ast.rs  error.rs  grammar.pest  lexer.rs  lib.rs  parser.rs  token.rs
crates/goonsharp-web/: Cargo.toml  index.html
crates/goonsharp-web/src/: lib.rs
crates/goonui/: Cargo.toml
crates/goonui/src/: lib.rs  theme.rs  widgets.rs
docs/: book.toml
docs/src/: SUMMARY.md  appendix-keywords.md  async.md  cheatsheet.md  closures.md  control-flow.md  error-handling.md  first-goonsesh.md  functions.md  hello-goon.md  installation.md  introduction.md  keywords.md  modules.md  pattern-matching.md  structs-enums.md  traits-impl.md  variables.md
docs/src/goonhub/: building.md  dependencies.md  projects.md
docs/src/goonui/: intro.md  theme.md  widgets.md
editors/vscode/: .vscodeignore  LICENSE.md  README.md  goonsharp-69.0.0.vsix  goonsharp-69.0.1.vsix  language-configuration.json  package.json  vscode
editors/vscode/snippets/: goonsharp.json
editors/vscode/syntaxes/: goonsharp.tmLanguage.json
editors/vscode/themes/: goon-dark.json  goon-icon-theme.json  goon-light.json
examples/: closures_iterators.goons  coom_counter.goons  enum_match.goons  error_handling.goons  fizzbuzz.goons  generics.goons  goon_game.goons  goonstruct_demo.goons  hello_goon.goons  traits_demo.goons
npm/: README.md  install.js  package.json
website/: index.html  package.json  tsconfig.json  vite.config.ts
website/public/wasm/: goonsharp_web.d.ts  goonsharp_web.js  goonsharp_web_bg.wasm
website/src/: main.ts  router.ts  style.css
website/src/components/: nav.ts
website/src/pages/: docs.ts  install.ts  landing.ts  playground.ts
