[package]
name = "goonhub"
version.workspace = true
edition.workspace = true
description = "GoonHub — the package manager, build system, and brain of GoonSharp"

[[bin]]
name = "goonhub"
path = "src/main.rs"

[dependencies]
goonsharp-parser.workspace = true
goonsharp-codegen.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
